# compiler

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  antlr4.sh  compile.sh  compile_flags.txt  main.cpp  note.md  test.sh
frontend/: SysY.g4  SysY.interp  SysY.tokens  SysYBaseVisitor.cpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYParser.cpp  SysYParser.h  SysYVisitor.cpp  SysYVisitor.h  tokens.g4
runtime/: sylib.c  sylib.h
scripts/: build.py  judge.py
src/: main.cpp  we_want_cmake.hpp
src/common/: Display.hpp  argparse.hpp  common.hpp  config.hpp  errors.hpp  ir.cpp  ir.hpp  symbol_table.hpp  utils.hpp
src/frontend/: AstVisitor.cpp  AstVisitor.hpp  IrGen.cpp  IrGen.hpp  SysY.g4  SysY.interp  SysYBaseVisitor.cpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYParser.cpp  SysYParser.h  SysYVisitor.cpp  SysYVisitor.h  Typer.cpp  Typer.hpp  ast.cpp  ast.hpp  literals.g4  symbol_table.cpp  symbol_table.hpp  tokens.g4
src/mediumend/: algebra_simplification.cpp  arrayssa.cpp  bb_sort.cpp  br2switch.cpp  cfg.cpp  cfg.hpp  const_compute.cpp  constant_propagation.cpp  dead_code_eliminate.cpp  dead_code_emilinate.cpp  duplicate_load_store_elimination.cpp  function_inline.cpp  gep_destruction.cpp  gvn.cpp  gvn_gcm.cpp  hoist_load_store.cpp  if_combine.cpp  loop_combine.cpp  loop_compute.cpp  loop_fusion.cpp  loop_interchange.cpp  loop_parallel.cpp  loop_unroll.cpp  mem2reg.cpp  mem2reg.hpp  optimizer.cpp  optimizer.hpp  optmizer.cpp  optmizer.hpp  osp.cpp  (+7 more)
test/: main.py  requirements.txt  test.py
(+28 files in other folders)
